--- a/web_app/frontend/package.json
+++ b/web_app/frontend/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.13.2",
+    "element-plus": "^2.13.0",
+    "marked": "^17.0.1",
     "vue": "^3.5.24"
   },
   "devDependencies": {
